Reduce size of textbook image and correct ad alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -174,6 +174,7 @@ form {
 .book-ad{
 	display: inline-block;
 	width: 40%;
+	vertical-align: top;
 }
 .book-title {
 	margin: 0;
@@ -189,8 +190,7 @@ form {
 }
 
 img.book-image{
-	height: 250px;
-	width: 180px;
+	width: 150px;
 }
 
 /* Homepage */
